# som

./: .gitignore  COVERAGE.md  Cargo.toml  addition.som  checklist.md  diff.txt  flake.nix  guide.md  justfile  readme.md  shell.nix  som  test.json  test.som  test_ffi  test_ffi_06acdbde-9d4f-43f5-abfb-bb82f42b714d  test_ffi_07c59040-58c0-4652-aab2-de8072d38f67  test_ffi_0c185c55-bc57-4972-b3df-da32a11377ab  test_ffi_0d8cd05b-0415-44a7-a8fd-7a24103adee9  test_ffi_0ea6c9f9-ac28-49ea-bdd8-be5f2cbf7053  test_ffi_13381bff-f99c-4d11-ae7f-4dfd76e7d1d8  test_ffi_1415b227-ef14-4849-a45e-aad4cbadac1f  test_ffi_15061fec-c78b-46b8-a4db-dc350e2bed7c  test_ffi_1a6328a5-9901-46d9-9dd1-811a4fda6ab2  test_ffi_1b4c576c-1f16-4257-86bd-c3d2419434c4  test_ffi_275658d7-65fe-48aa-971f-06072b568bb3  test_ffi_3e41af34-f496-4828-8ee6-0748fb54e6b6  test_ffi_433124ce-ef92-4038-885e-991f5bd98f45  test_ffi_475b5cd6-d5ae-4e54-84a2-540c614e3ead  test_ffi_5243486d-d8b6-41b0-ae19-f1730ee4f236  test_ffi_52a058da-fa93-48eb-a0d0-b1db303b02fe  test_ffi_54fbd2ac-5c40-41dc-a2f3-0071d2cc15e5  test_ffi_5953013f-825b-450b-8847-b64ae2126599  test_ffi_67fdbef5-2e86-42bf-8980-bb2ac46b8962  test_ffi_6da484fe-c7cd-4e9e-a63b-37151f776118  test_ffi_717edf12-06de-4621-80da-9754199116a3  test_ffi_753e8a50-02c4-4653-8543-12f6ee78aa88  test_ffi_7b966fea-c267-4c84-9166-da08754792a4  test_ffi_7cde0de4-9320-40e3-841c-a840f72144ea  test_ffi_834631b0-c6f7-4690-bf55-bcdd3dc88850  (+31 more)
.claude/: settings.local.json
.github/: dependabot.yaml  labelers.yml
.github/workflows/: benchmark.yml  ci.yaml
benches/: compilation_bench.rs  end_to_end_bench.rs  execution_bench.rs
cli/: Cargo.toml
cli/src/: main.rs
compiler/: Cargo.toml
compiler/src/: diagnostics.rs  std.rs
compiler/tests/: borrow_check.rs  control_flow.rs  expressions.rs  ffi.rs  impl_blocks.rs  lexer.rs  modules.rs  mutation.rs  parser.rs  span.rs  std_lib.rs  structs.rs  type_check.rs
crates/ast/: Cargo.toml
crates/canvas/: Cargo.toml
crates/common/: Cargo.toml
crates/compiler/: Cargo.toml
crates/hir/: Cargo.toml
crates/lang/codegen/: Cargo.toml
crates/lang/codegen/src/: lib.rs
crates/lang/eval/: Cargo.toml
crates/lang/eval/src/: lib.rs
crates/lang/lsp/: Cargo.toml
crates/lang/lsp/src/: lib.rs  server.rs
crates/mir/: Cargo.toml
crates/reactive/: Cargo.toml
crates/render/canvas-blitz/: Cargo.toml
crates/render/canvas-blitz/examples/: counter_live.rs  counter_static.rs
crates/render/canvas-blitz/src/: ambient.rs  lib.rs  renderer.rs  view.rs
crates/runtime/: Cargo.toml
docs/: BORROW_CHECKER_GUIDE.md  implementing-closures.md  implementing-pattern-matching.md  implementing-structs.md  multiple-dispatch-plan.md  parser-architecture.md
editors/vscode/: .vscodeignore  README.md  bun.lockb  language-configuration.json  package.json  tsconfig.json
example/: main.som  std.som  test.som
examples/: while_loop.som
examples/test/: main.som
lsp/: Cargo.toml
lsp/src/: main.rs
sandbox/: main.som
som/: Cargo.toml
som-lsp/: Cargo.toml
som-lsp/src/: convert.rs  index.rs  server.rs
som/src/: diagnostics.rs  lib.rs  main.rs  program.rs  span.rs  std.rs
som/std/: process.som  string.som
som/tests/: control_flow.rs  impl_blocks.rs  modules.rs  parser.rs  span.rs  test_ffi.c
somc/: Cargo.toml
somc/src/linker/: mod.rs
somc/src/type_check/: error.rs
somc/tests/: ffi.rs
span_derive/: Cargo.toml
span_derive/src/: lib.rs
src/: arena.rs  compiler.rs  compiler_example.rs  diagnostic.rs  diagnostics.rs  errors.rs  files.rs  generator.rs  highlighter.rs  lexer.rs  lib.rs  macros.rs  main.rs  main.som  module.rs  multi_source.rs  prelude.rs  program.rs  render.rs  runner.rs  scope.rs  source.rs  span.rs  std.rs  tokenizer.rs
src/abstract_syntax_tree/: builder.rs  mod.rs
src/ast/: builder.rs  decl.rs  expr.rs  expression.rs  file.rs  mod.rs  module.rs  pseudo.rs  span.rs  statement.rs  stmt.rs  ty.rs  typing.rs
src/borrow_check/: error.rs  mod.rs
src/cli/: compilation_result.rs  mod.rs  process_tree.rs  simple.rs  watch.rs
src/code_gen/: mod.rs
src/compiler/: capture.rs  environment.rs  external.rs  jit.rs  mod.rs
src/concrete_syntax_tree/: grammar.rs  mod.rs
src/diagnostics/: mod.rs
src/emit/: expr.rs  expression.rs  mod.rs  statement.rs
src/expressions/: assignment.rs  block.rs  call.rs  conditional.rs  field_access.rs  function.rs  group.rs  identifier.rs  mod.rs  struct_constructor.rs  while_loop.rs
src/highlighter/: mod.rs
src/lexer/: identifier.rs  mod.rs  path.rs  span.rs  tests.rs  token.rs
src/linker/: mod.rs
src/lowering/: captures.rs  metadata.rs  mod.rs  tail_calls.rs
src/parser/: ast.rs  builder.rs  cst.rs  dec.rs  decl.rs  error.rs  expr.rs  expression.rs  file.rs  function.rs  grammar.rs  lookup.rs  macros.rs  mod.rs  module.rs  program.rs  statement.rs  stmt.rs  ty.rs  type_parser.rs  typing.rs
src/passer/: mod.rs  unused.rs
src/resolve/: mod.rs
src/runner/: mod.rs
src/scanner/: lexeme.rs  mod.rs  token.rs
src/statements/: assignment.rs  declaration.rs  extern_declaration.rs  import.rs  mod.rs  type_declaration.rs  variable_declaration.rs
src/tests/: addition.som  arithmetic.rs  binary.rs  binary.som  block.rs  block.som  blocks.rs  boundary_tests.rs  closures.rs  comparisons.rs  comprehensive_arithmetic.rs  comprehensive_functions.rs  comprehensive_integration.rs  comprehensive_variables.rs  conditional.rs  conditional.som  conditionals.rs  edge_cases.rs  error_handling.rs  extended_literals.rs  function.rs  function.som  functions.rs  group.rs  group.som  integration.rs  literals.rs  loops.rs  loops.som  mod.rs  one_file.som  performance_tests.rs  precedence.rs  recursion.rs  regression_tests.rs  test_helpers.rs  type_alias.som  types.rs  types.som  unary.rs  (+3 more)
src/tokenizer/: mod.rs  token.rs
std/: alloc.som  io.som  mem.som  std.som  string.som
tests/: borrow_check.rs  ffi.rs  floats.rs  lexer.rs  modules.rs  mutation.rs  parser.rs  som  std_lib.rs  structs.rs  test.rs  test_ffi.c  type_check.rs
(+193 files in other folders)
