[package]
name = "som"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[workspace]
members = ["crates/*"]
resolver = "3"

[dependencies]
som_common = { workspace = true }
som_ast = { workspace = true }
som_hir = { workspace = true }
som_mir = { workspace = true }
som_codegen = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ena = { workspace = true }

[dev-dependencies]
insta = "1.47"

[workspace.dependencies]
tracing = "0.1.44"
ena = "0.14.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
som_common = { path = "crates/common" }
som_ast = { path = "crates/ast" }
som_hir = { path = "crates/hir" }
som_mir = { path = "crates/mir" }
som_codegen = { path = "crates/codegen" }
