[package]
name = "som"
version = "0.1.0"
edition = "2024"

[dependencies]
som_common = { workspace = true }
som_ast = { workspace = true }
som_hir = { workspace = true }
som_mir = { workspace = true }
som_codegen = { workspace = true }
som_lsp = { workspace = true }
clap = { workspace = true }
owo-colors = { workspace = true }
terminal_size = { workspace = true }

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
tracing = "0.1.44"
ena = "0.14.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
terminal_size = "0.4"
som_common = { path = "crates/common" }
som_ast = { path = "crates/ast" }
som_hir = { path = "crates/hir" }
som_mir = { path = "crates/mir" }
som_codegen = { path = "crates/codegen" }
som_lsp = { path = "crates/lsp" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
