[package]
name = "som-lsp"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Somfic"]
description = "som language server"
rust-version = "1.90.0"

[[bin]]
name = "somlsp"
path = "src/main.rs"

[dependencies]
som = { path = "../compiler" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
