[package]
name = "som"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Somfic"]
description = "The 'som' programming language"
rust-version = "1.90.0"

[dependencies]
cranelift = { version = "0.128.3", features = ["module", "object"] }
ena = "0.14.3"
logos = "0.16.1"
logos-display = "0.1.3"
owo-colors = "4.2.3"
target-lexicon = "0.13.4"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3"
uuid = { version = "1.20.0", features = ["v4"] }
