[package]
name = "som_codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
cranelift-codegen = "0.131.1"
cranelift-frontend = "0.131.1"
cranelift-jit = "0.131.1"
cranelift-module = "0.131.1"
cranelift-native = "0.131.1"
som_common = { workspace = true }
som_hir = { workspace = true }
som_mir = { workspace = true }
